:sparkles: 사운드 삭제 및 내 사운드 목록 조회 api 개발 / 스웨거 업데이트
